# STT-performance-evaluation

./: .gitignore  1분_target.txt  1분_test.txt  3명이조.ipynb  3명이조.py  5분_target.txt  5분_test.txt  Dic.py  HashTable.py  JJJ.py  LCS.py  LinkedList.py  Patience.md  README.md  YJP.py  algorithm1.py  main.py  main_LCS.py  patience.py  target.txt  test.txt  확진자급감_test.txt
STTPE/: CMakeLists.txt
STTPE/STTPE/: CMakeLists.txt  STTPE.cpp
STTPE_cpp/: .gitignore
STTPE_cpp/STTPE/: STTPE.cpp  STTPE.h
data/: LOVEDIVE_target.txt  LOVEDIVE_test.txt  부럽지가 않어_raw_test.txt  부럽지가않어_target.txt  부럽지가않어_vocal_test.txt  알고리즘강의_target.txt  알고리즘강의_test.txt  확진자급감_target.txt
sttpe_venv/: pyvenv.cfg
